# transformable_bot

./: CMakeLists.txt  README.md  package.xml
config/: view_robot.rviz
launch/: view_robot.launch.py
src/: dynamic_joint_mode_switch_plugin.cpp  motor_plugin.cpp  servo_x_plugin.cpp  servo_y_plugin.cpp
urdf/: mode_switch_plugin.urdf.xacro  ring_attached.urdf.xacro  ring_system.urdf.xacro  servo_motor_plugins.urdf.xacro  transformable_bot.urdf  transformable_bot.urdf.xacro
